package shapes;

//Shape.java
public abstract class Shape {
 // Abstract method for surface area
 public abstract double surface_area();

 // Abstract method for volume
 public abstract double volume();
}