@startuml

abstract class Shape {
  -surface_area(): double <<abstract>>
  -volume(): double <<abstract>>
}

class Sphere {
  -radius: double
  +Sphere(radius: double)
  +surface_area(): double
  +volume(): double
  +toString(): String
}

class Cylinder {
  -radius: double
  -height: double
  +Cylinder(radius: double, height: double)
  +surface_area(): double
  +volume(): double
  +toString(): String
}

class Cone {
  -radius: double
  -height: double
  +Cone(radius: double, height: double)
  +surface_area(): double
  +volume(): double
  +toString(): String
}

class ShapeArray {
  +main(args: String[])
}

Shape <|-- Sphere
Shape <|-- Cylinder
Shape <|-- Cone

@enduml